--- a/flexbox-1/styles.css
+++ b/flexbox-1/styles.css
@@ -1,5 +1,3 @@
-/*Base styles*/
-
 body {
     background-color: hsl(35, 40%, 91%);
     color: hsl(25, 22%, 56%);
@@ -9,6 +7,10 @@ body {
 .container {
     background-color: hsl(35, 40%, 95%);
     border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    margin-inline: auto;
+    max-width: 1200px;
 }
 
 .item {
@@ -16,4 +18,25 @@ body {
     border: 1px solid hsl(35, 40%, 78%);
     border-radius: 4px;
     box-shadow: 2px 2px 4px hsl(35, 40%, 78%);
+    margin: 16px;
+    padding: 32px;
+}
+
+@media screen and (min-width: 576px) {
+    .container {
+        background-color: hsl(35, 40%, 95%);
+        border-radius: 4px;
+        flex-direction: row;
+    }
+
+    #aside {
+        flex-basis: 300px;
+        flex-shrink: 0;
+    }
+
+    #main {
+        /*flex-basis: 900px;*/
+        /*flex-shrink: 1;*/
+        /*flex-grow: 0;*/
+    }
 }
